// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getMealDataAndRankingFor shall find and return ranking data for curry meal with excluded level 60 ingredients 1`] = `
[
  {
    "PokemonCombinationForMeal30DAO.getPokemonCombinationsForMeal": [
      "DREAM_EATER_BUTTER_CURRY",
      [
        "PAMTRE",
        "LUM",
        "GREPA",
        "BLUK",
        "PECHA",
        "MAGO",
        "LEPPA",
        "CHERI",
        "PERSIM",
        "FIGY",
        "DURIN",
        "SITRUS",
        "ORAN",
        "WIKI",
        "CHESTO",
        "RAWST",
        "BELUE",
        "YACHE",
      ],
    ],
  },
]
`;

exports[`getMealDataAndRankingFor shall find and return ranking data for given meal 1`] = `
[
  {
    "PokemonCombinationForMealDAO.getPokemonCombinationsForMeal": [
      "LOVELY_KISS_SMOOTHIE",
      [
        "PAMTRE",
        "LUM",
        "GREPA",
        "BLUK",
        "PECHA",
        "MAGO",
        "LEPPA",
        "CHERI",
        "PERSIM",
        "FIGY",
        "DURIN",
        "SITRUS",
        "ORAN",
        "WIKI",
        "CHESTO",
        "RAWST",
        "BELUE",
        "YACHE",
      ],
    ],
  },
]
`;

exports[`getMealDataAndRankingFor shall find and return ranking data for given meal with excluded level 60 ingredients 1`] = `
[
  {
    "PokemonCombinationForMeal30DAO.getPokemonCombinationsForMeal": [
      "LOVELY_KISS_SMOOTHIE",
      [
        "PAMTRE",
        "LUM",
        "GREPA",
        "BLUK",
        "PECHA",
        "MAGO",
        "LEPPA",
        "CHERI",
        "PERSIM",
        "FIGY",
        "DURIN",
        "SITRUS",
        "ORAN",
        "WIKI",
        "CHESTO",
        "RAWST",
        "BELUE",
        "YACHE",
      ],
    ],
  },
]
`;

exports[`getMealDataAndRankingFor shall find and return ranking data for salad meal with excluded level 60 ingredients 1`] = `
[
  {
    "PokemonCombinationForMeal30DAO.getPokemonCombinationsForMeal": [
      "NINJA_SALAD",
      [
        "PAMTRE",
        "LUM",
        "GREPA",
        "BLUK",
        "PECHA",
        "MAGO",
        "LEPPA",
        "CHERI",
        "PERSIM",
        "FIGY",
        "DURIN",
        "SITRUS",
        "ORAN",
        "WIKI",
        "CHESTO",
        "RAWST",
        "BELUE",
        "YACHE",
      ],
    ],
  },
]
`;

exports[`getMealFocusedRanking shall sort all pokemon - no filters, default nrOfMeals 1`] = `
[
  {
    "PokemonCombinationForMealDAO.getFocusedRankingForMeals": [
      [
        "FANCY_APPLE_CURRY",
        "SIMPLE_CHOWDER",
        "MILD_HONEY_CURRY",
        "BEANBURGER_CURRY",
        "HEARTY_CHEESEBURGER_CURRY",
        "DROUGHT_KATSU_CURRY",
        "SOLAR_POWER_TOMATO_CURRY",
        "MELTY_OMELETTE_CURRY",
        "SOFT_POTATO_CHOWDER",
        "BULK_UP_BEAN_CURRY",
        "SPORE_MUSHROOM_CURRY",
        "EGG_BOMB_CURRY",
        "SPICY_LEEK_CURRY",
        "NINJA_CURRY",
        "GRILLED_TAIL_CURRY",
        "DREAM_EATER_BUTTER_CURRY",
        "FANCY_APPLE_SALAD",
        "BEAN_HAM_SALAD",
        "SNOOZY_TOMATO_SALAD",
        "SNOW_CLOAK_CAESAR_SALAD",
        "WATER_VEIL_TOFU_SALAD",
        "HEAT_WAVE_TOFU_SALAD",
        "DAZZLING_APPLE_CHEESE_SALAD",
        "MOOMOO_CAPRESE_SALAD",
        "IMMUNITY_LEEK_SALAD",
        "SUPERPOWER_EXTREME_SALAD",
        "CONTRARY_CHOCOLATE_MEAT_SALAD",
        "GLUTTONY_POTATO_SALAD",
        "OVERHEAT_GINGER_SALAD",
        "SPORE_MUSHROOM_SALAD",
        "SLOWPOKE_TAIL_PEPPER_SALAD",
        "NINJA_SALAD",
        "WARM_MOOMOO_MILK",
        "FANCY_APPLE_JUICE",
        "CRAFT_SODA_POP",
        "LUCKY_CHANT_APPLE_PIE",
        "FLUFFY_SWEET_POTATOES",
        "EMBER_GINGER_TEA",
        "CLOUD_NINE_SOY_CAKE",
        "STALWART_VEGETABLE_JUICE",
        "BIG_MALASADA",
        "HUSTLE_PROTEIN_SMOOTHIE",
        "HUGE_POWER_SOY_DONUTS",
        "SWEET_SCENT_CHOCOLATE_CAKE",
        "LOVELY_KISS_SMOOTHIE",
        "STEADFAST_GINGER_COOKIES",
        "NEROLIS_RESTORATIVE_TEA",
        "JIGGLYPUFFS_FRUITY_FLAN",
      ],
      [
        "PAMTRE",
        "LUM",
        "GREPA",
        "BLUK",
        "PECHA",
        "MAGO",
        "LEPPA",
        "CHERI",
        "PERSIM",
        "FIGY",
        "DURIN",
        "SITRUS",
        "ORAN",
        "WIKI",
        "CHESTO",
        "RAWST",
        "BELUE",
        "YACHE",
      ],
      3,
    ],
  },
]
`;

exports[`getMealFocusedRanking shall sort all pokemon for limit30 1`] = `
[
  {
    "PokemonCombinationForMealDAO.getFocusedRankingForMeals": [
      [
        "FANCY_APPLE_CURRY",
        "SIMPLE_CHOWDER",
        "MILD_HONEY_CURRY",
        "BEANBURGER_CURRY",
        "HEARTY_CHEESEBURGER_CURRY",
        "DROUGHT_KATSU_CURRY",
        "SOLAR_POWER_TOMATO_CURRY",
        "MELTY_OMELETTE_CURRY",
        "SOFT_POTATO_CHOWDER",
        "BULK_UP_BEAN_CURRY",
        "SPORE_MUSHROOM_CURRY",
        "EGG_BOMB_CURRY",
        "SPICY_LEEK_CURRY",
        "NINJA_CURRY",
        "GRILLED_TAIL_CURRY",
        "DREAM_EATER_BUTTER_CURRY",
        "FANCY_APPLE_SALAD",
        "BEAN_HAM_SALAD",
        "SNOOZY_TOMATO_SALAD",
        "SNOW_CLOAK_CAESAR_SALAD",
        "WATER_VEIL_TOFU_SALAD",
        "HEAT_WAVE_TOFU_SALAD",
        "DAZZLING_APPLE_CHEESE_SALAD",
        "MOOMOO_CAPRESE_SALAD",
        "IMMUNITY_LEEK_SALAD",
        "SUPERPOWER_EXTREME_SALAD",
        "CONTRARY_CHOCOLATE_MEAT_SALAD",
        "GLUTTONY_POTATO_SALAD",
        "OVERHEAT_GINGER_SALAD",
        "SPORE_MUSHROOM_SALAD",
        "SLOWPOKE_TAIL_PEPPER_SALAD",
        "NINJA_SALAD",
        "WARM_MOOMOO_MILK",
        "FANCY_APPLE_JUICE",
        "CRAFT_SODA_POP",
        "LUCKY_CHANT_APPLE_PIE",
        "FLUFFY_SWEET_POTATOES",
        "EMBER_GINGER_TEA",
        "CLOUD_NINE_SOY_CAKE",
        "STALWART_VEGETABLE_JUICE",
        "BIG_MALASADA",
        "HUSTLE_PROTEIN_SMOOTHIE",
        "HUGE_POWER_SOY_DONUTS",
        "SWEET_SCENT_CHOCOLATE_CAKE",
        "LOVELY_KISS_SMOOTHIE",
        "STEADFAST_GINGER_COOKIES",
        "NEROLIS_RESTORATIVE_TEA",
        "JIGGLYPUFFS_FRUITY_FLAN",
      ],
      [
        "PAMTRE",
        "LUM",
        "GREPA",
        "BLUK",
        "PECHA",
        "MAGO",
        "LEPPA",
        "CHERI",
        "PERSIM",
        "FIGY",
        "DURIN",
        "SITRUS",
        "ORAN",
        "WIKI",
        "CHESTO",
        "RAWST",
        "BELUE",
        "YACHE",
      ],
      3,
    ],
  },
]
`;

exports[`getMealFocusedRanking shall sort all pokemon with explicit nrOfMeals 1`] = `
[
  {
    "PokemonCombinationForMealDAO.getFocusedRankingForMeals": [
      [
        "FANCY_APPLE_CURRY",
        "SIMPLE_CHOWDER",
        "MILD_HONEY_CURRY",
        "BEANBURGER_CURRY",
        "HEARTY_CHEESEBURGER_CURRY",
        "DROUGHT_KATSU_CURRY",
        "SOLAR_POWER_TOMATO_CURRY",
        "MELTY_OMELETTE_CURRY",
        "SOFT_POTATO_CHOWDER",
        "BULK_UP_BEAN_CURRY",
        "SPORE_MUSHROOM_CURRY",
        "EGG_BOMB_CURRY",
        "SPICY_LEEK_CURRY",
        "NINJA_CURRY",
        "GRILLED_TAIL_CURRY",
        "DREAM_EATER_BUTTER_CURRY",
        "FANCY_APPLE_SALAD",
        "BEAN_HAM_SALAD",
        "SNOOZY_TOMATO_SALAD",
        "SNOW_CLOAK_CAESAR_SALAD",
        "WATER_VEIL_TOFU_SALAD",
        "HEAT_WAVE_TOFU_SALAD",
        "DAZZLING_APPLE_CHEESE_SALAD",
        "MOOMOO_CAPRESE_SALAD",
        "IMMUNITY_LEEK_SALAD",
        "SUPERPOWER_EXTREME_SALAD",
        "CONTRARY_CHOCOLATE_MEAT_SALAD",
        "GLUTTONY_POTATO_SALAD",
        "OVERHEAT_GINGER_SALAD",
        "SPORE_MUSHROOM_SALAD",
        "SLOWPOKE_TAIL_PEPPER_SALAD",
        "NINJA_SALAD",
        "WARM_MOOMOO_MILK",
        "FANCY_APPLE_JUICE",
        "CRAFT_SODA_POP",
        "LUCKY_CHANT_APPLE_PIE",
        "FLUFFY_SWEET_POTATOES",
        "EMBER_GINGER_TEA",
        "CLOUD_NINE_SOY_CAKE",
        "STALWART_VEGETABLE_JUICE",
        "BIG_MALASADA",
        "HUSTLE_PROTEIN_SMOOTHIE",
        "HUGE_POWER_SOY_DONUTS",
        "SWEET_SCENT_CHOCOLATE_CAKE",
        "LOVELY_KISS_SMOOTHIE",
        "STEADFAST_GINGER_COOKIES",
        "NEROLIS_RESTORATIVE_TEA",
        "JIGGLYPUFFS_FRUITY_FLAN",
      ],
      [
        "PAMTRE",
        "LUM",
        "GREPA",
        "BLUK",
        "PECHA",
        "MAGO",
        "LEPPA",
        "CHERI",
        "PERSIM",
        "FIGY",
        "DURIN",
        "SITRUS",
        "ORAN",
        "WIKI",
        "CHESTO",
        "RAWST",
        "BELUE",
        "YACHE",
      ],
      5,
    ],
  },
]
`;

exports[`getMealGeneralistRanking shall sort all pokemon - lategame=true 1`] = `
[
  {
    "PokemonCombinationForMealDAO.getFlexibleRankingForMeals": [
      [
        "EGG_BOMB_CURRY",
        "SPICY_LEEK_CURRY",
        "NINJA_CURRY",
        "GRILLED_TAIL_CURRY",
        "DREAM_EATER_BUTTER_CURRY",
        "GLUTTONY_POTATO_SALAD",
        "OVERHEAT_GINGER_SALAD",
        "SPORE_MUSHROOM_SALAD",
        "SLOWPOKE_TAIL_PEPPER_SALAD",
        "NINJA_SALAD",
        "LOVELY_KISS_SMOOTHIE",
        "STEADFAST_GINGER_COOKIES",
        "NEROLIS_RESTORATIVE_TEA",
        "JIGGLYPUFFS_FRUITY_FLAN",
      ],
      [
        "PAMTRE",
        "LUM",
        "GREPA",
        "BLUK",
        "PECHA",
        "MAGO",
        "LEPPA",
        "CHERI",
        "PERSIM",
        "FIGY",
        "DURIN",
        "SITRUS",
        "ORAN",
        "WIKI",
        "CHESTO",
        "RAWST",
        "BELUE",
        "YACHE",
      ],
    ],
  },
]
`;

exports[`getMealGeneralistRanking shall sort all pokemon - limit30=true 2`] = `
[
  {
    "PokemonCombinationForMeal30DAO.getFlexibleRankingForMeals": [
      [
        "FANCY_APPLE_CURRY",
        "SIMPLE_CHOWDER",
        "MILD_HONEY_CURRY",
        "BEANBURGER_CURRY",
        "HEARTY_CHEESEBURGER_CURRY",
        "DROUGHT_KATSU_CURRY",
        "SOLAR_POWER_TOMATO_CURRY",
        "MELTY_OMELETTE_CURRY",
        "SOFT_POTATO_CHOWDER",
        "BULK_UP_BEAN_CURRY",
        "SPORE_MUSHROOM_CURRY",
        "EGG_BOMB_CURRY",
        "SPICY_LEEK_CURRY",
        "NINJA_CURRY",
        "GRILLED_TAIL_CURRY",
        "DREAM_EATER_BUTTER_CURRY",
        "FANCY_APPLE_SALAD",
        "BEAN_HAM_SALAD",
        "SNOOZY_TOMATO_SALAD",
        "SNOW_CLOAK_CAESAR_SALAD",
        "WATER_VEIL_TOFU_SALAD",
        "HEAT_WAVE_TOFU_SALAD",
        "DAZZLING_APPLE_CHEESE_SALAD",
        "MOOMOO_CAPRESE_SALAD",
        "IMMUNITY_LEEK_SALAD",
        "SUPERPOWER_EXTREME_SALAD",
        "CONTRARY_CHOCOLATE_MEAT_SALAD",
        "GLUTTONY_POTATO_SALAD",
        "OVERHEAT_GINGER_SALAD",
        "SPORE_MUSHROOM_SALAD",
        "SLOWPOKE_TAIL_PEPPER_SALAD",
        "NINJA_SALAD",
        "WARM_MOOMOO_MILK",
        "FANCY_APPLE_JUICE",
        "CRAFT_SODA_POP",
        "LUCKY_CHANT_APPLE_PIE",
        "FLUFFY_SWEET_POTATOES",
        "EMBER_GINGER_TEA",
        "CLOUD_NINE_SOY_CAKE",
        "STALWART_VEGETABLE_JUICE",
        "BIG_MALASADA",
        "HUSTLE_PROTEIN_SMOOTHIE",
        "HUGE_POWER_SOY_DONUTS",
        "SWEET_SCENT_CHOCOLATE_CAKE",
        "LOVELY_KISS_SMOOTHIE",
        "STEADFAST_GINGER_COOKIES",
        "NEROLIS_RESTORATIVE_TEA",
        "JIGGLYPUFFS_FRUITY_FLAN",
      ],
      [
        "PAMTRE",
        "LUM",
        "GREPA",
        "BLUK",
        "PECHA",
        "MAGO",
        "LEPPA",
        "CHERI",
        "PERSIM",
        "FIGY",
        "DURIN",
        "SITRUS",
        "ORAN",
        "WIKI",
        "CHESTO",
        "RAWST",
        "BELUE",
        "YACHE",
      ],
    ],
  },
]
`;

exports[`getMealGeneralistRanking shall sort all pokemon - limit30=true and advanced=true 1`] = `
[
  {
    "PokemonCombinationForMeal30DAO.getFlexibleRankingForMeals": [
      [
        "HEARTY_CHEESEBURGER_CURRY",
        "DROUGHT_KATSU_CURRY",
        "SOLAR_POWER_TOMATO_CURRY",
        "MELTY_OMELETTE_CURRY",
        "SOFT_POTATO_CHOWDER",
        "BULK_UP_BEAN_CURRY",
        "SPORE_MUSHROOM_CURRY",
        "EGG_BOMB_CURRY",
        "SPICY_LEEK_CURRY",
        "NINJA_CURRY",
        "GRILLED_TAIL_CURRY",
        "DREAM_EATER_BUTTER_CURRY",
        "SNOW_CLOAK_CAESAR_SALAD",
        "WATER_VEIL_TOFU_SALAD",
        "HEAT_WAVE_TOFU_SALAD",
        "DAZZLING_APPLE_CHEESE_SALAD",
        "MOOMOO_CAPRESE_SALAD",
        "IMMUNITY_LEEK_SALAD",
        "SUPERPOWER_EXTREME_SALAD",
        "CONTRARY_CHOCOLATE_MEAT_SALAD",
        "GLUTTONY_POTATO_SALAD",
        "OVERHEAT_GINGER_SALAD",
        "SPORE_MUSHROOM_SALAD",
        "SLOWPOKE_TAIL_PEPPER_SALAD",
        "NINJA_SALAD",
        "LUCKY_CHANT_APPLE_PIE",
        "FLUFFY_SWEET_POTATOES",
        "EMBER_GINGER_TEA",
        "CLOUD_NINE_SOY_CAKE",
        "STALWART_VEGETABLE_JUICE",
        "BIG_MALASADA",
        "HUSTLE_PROTEIN_SMOOTHIE",
        "HUGE_POWER_SOY_DONUTS",
        "SWEET_SCENT_CHOCOLATE_CAKE",
        "LOVELY_KISS_SMOOTHIE",
        "STEADFAST_GINGER_COOKIES",
        "NEROLIS_RESTORATIVE_TEA",
        "JIGGLYPUFFS_FRUITY_FLAN",
      ],
      [
        "PAMTRE",
        "LUM",
        "GREPA",
        "BLUK",
        "PECHA",
        "MAGO",
        "LEPPA",
        "CHERI",
        "PERSIM",
        "FIGY",
        "DURIN",
        "SITRUS",
        "ORAN",
        "WIKI",
        "CHESTO",
        "RAWST",
        "BELUE",
        "YACHE",
      ],
    ],
  },
]
`;

exports[`getMealGeneralistRanking shall sort all pokemon - limit30=true and unlocked=true 1`] = `
[
  {
    "PokemonCombinationForMeal30DAO.getFlexibleRankingForMeals": [
      [
        "HEARTY_CHEESEBURGER_CURRY",
        "DROUGHT_KATSU_CURRY",
        "SOLAR_POWER_TOMATO_CURRY",
        "MELTY_OMELETTE_CURRY",
        "BULK_UP_BEAN_CURRY",
        "SNOW_CLOAK_CAESAR_SALAD",
        "WATER_VEIL_TOFU_SALAD",
        "HEAT_WAVE_TOFU_SALAD",
        "DAZZLING_APPLE_CHEESE_SALAD",
        "MOOMOO_CAPRESE_SALAD",
        "CONTRARY_CHOCOLATE_MEAT_SALAD",
        "OVERHEAT_GINGER_SALAD",
        "LUCKY_CHANT_APPLE_PIE",
        "EMBER_GINGER_TEA",
        "CLOUD_NINE_SOY_CAKE",
        "STALWART_VEGETABLE_JUICE",
        "BIG_MALASADA",
        "HUSTLE_PROTEIN_SMOOTHIE",
        "HUGE_POWER_SOY_DONUTS",
        "SWEET_SCENT_CHOCOLATE_CAKE",
        "LOVELY_KISS_SMOOTHIE",
        "STEADFAST_GINGER_COOKIES",
        "JIGGLYPUFFS_FRUITY_FLAN",
      ],
      [
        "PAMTRE",
        "LUM",
        "GREPA",
        "BLUK",
        "PECHA",
        "MAGO",
        "LEPPA",
        "CHERI",
        "PERSIM",
        "FIGY",
        "DURIN",
        "SITRUS",
        "ORAN",
        "WIKI",
        "CHESTO",
        "RAWST",
        "BELUE",
        "YACHE",
      ],
    ],
  },
]
`;

exports[`getMealGeneralistRanking shall sort all pokemon - no filters 2`] = `
[
  {
    "PokemonCombinationForMealDAO.getFlexibleRankingForMeals": [
      [
        "FANCY_APPLE_CURRY",
        "SIMPLE_CHOWDER",
        "MILD_HONEY_CURRY",
        "BEANBURGER_CURRY",
        "HEARTY_CHEESEBURGER_CURRY",
        "DROUGHT_KATSU_CURRY",
        "SOLAR_POWER_TOMATO_CURRY",
        "MELTY_OMELETTE_CURRY",
        "SOFT_POTATO_CHOWDER",
        "BULK_UP_BEAN_CURRY",
        "SPORE_MUSHROOM_CURRY",
        "EGG_BOMB_CURRY",
        "SPICY_LEEK_CURRY",
        "NINJA_CURRY",
        "GRILLED_TAIL_CURRY",
        "DREAM_EATER_BUTTER_CURRY",
        "FANCY_APPLE_SALAD",
        "BEAN_HAM_SALAD",
        "SNOOZY_TOMATO_SALAD",
        "SNOW_CLOAK_CAESAR_SALAD",
        "WATER_VEIL_TOFU_SALAD",
        "HEAT_WAVE_TOFU_SALAD",
        "DAZZLING_APPLE_CHEESE_SALAD",
        "MOOMOO_CAPRESE_SALAD",
        "IMMUNITY_LEEK_SALAD",
        "SUPERPOWER_EXTREME_SALAD",
        "CONTRARY_CHOCOLATE_MEAT_SALAD",
        "GLUTTONY_POTATO_SALAD",
        "OVERHEAT_GINGER_SALAD",
        "SPORE_MUSHROOM_SALAD",
        "SLOWPOKE_TAIL_PEPPER_SALAD",
        "NINJA_SALAD",
        "WARM_MOOMOO_MILK",
        "FANCY_APPLE_JUICE",
        "CRAFT_SODA_POP",
        "LUCKY_CHANT_APPLE_PIE",
        "FLUFFY_SWEET_POTATOES",
        "EMBER_GINGER_TEA",
        "CLOUD_NINE_SOY_CAKE",
        "STALWART_VEGETABLE_JUICE",
        "BIG_MALASADA",
        "HUSTLE_PROTEIN_SMOOTHIE",
        "HUGE_POWER_SOY_DONUTS",
        "SWEET_SCENT_CHOCOLATE_CAKE",
        "LOVELY_KISS_SMOOTHIE",
        "STEADFAST_GINGER_COOKIES",
        "NEROLIS_RESTORATIVE_TEA",
        "JIGGLYPUFFS_FRUITY_FLAN",
      ],
      [
        "PAMTRE",
        "LUM",
        "GREPA",
        "BLUK",
        "PECHA",
        "MAGO",
        "LEPPA",
        "CHERI",
        "PERSIM",
        "FIGY",
        "DURIN",
        "SITRUS",
        "ORAN",
        "WIKI",
        "CHESTO",
        "RAWST",
        "BELUE",
        "YACHE",
      ],
    ],
  },
]
`;

exports[`getMealGeneralistRanking shall sort all pokemon - unlocked=true 1`] = `
[
  {
    "PokemonCombinationForMealDAO.getFlexibleRankingForMeals": [
      [
        "HEARTY_CHEESEBURGER_CURRY",
        "DROUGHT_KATSU_CURRY",
        "SOLAR_POWER_TOMATO_CURRY",
        "MELTY_OMELETTE_CURRY",
        "BULK_UP_BEAN_CURRY",
        "SNOW_CLOAK_CAESAR_SALAD",
        "WATER_VEIL_TOFU_SALAD",
        "HEAT_WAVE_TOFU_SALAD",
        "DAZZLING_APPLE_CHEESE_SALAD",
        "MOOMOO_CAPRESE_SALAD",
        "CONTRARY_CHOCOLATE_MEAT_SALAD",
        "OVERHEAT_GINGER_SALAD",
        "LUCKY_CHANT_APPLE_PIE",
        "EMBER_GINGER_TEA",
        "CLOUD_NINE_SOY_CAKE",
        "STALWART_VEGETABLE_JUICE",
        "BIG_MALASADA",
        "HUSTLE_PROTEIN_SMOOTHIE",
        "HUGE_POWER_SOY_DONUTS",
        "SWEET_SCENT_CHOCOLATE_CAKE",
        "LOVELY_KISS_SMOOTHIE",
        "STEADFAST_GINGER_COOKIES",
        "JIGGLYPUFFS_FRUITY_FLAN",
      ],
      [
        "PAMTRE",
        "LUM",
        "GREPA",
        "BLUK",
        "PECHA",
        "MAGO",
        "LEPPA",
        "CHERI",
        "PERSIM",
        "FIGY",
        "DURIN",
        "SITRUS",
        "ORAN",
        "WIKI",
        "CHESTO",
        "RAWST",
        "BELUE",
        "YACHE",
      ],
    ],
  },
]
`;

exports[`getMealNames shall get all default meal names if no filters passed 1`] = `
[
  "FANCY_APPLE_CURRY",
  "SIMPLE_CHOWDER",
  "MILD_HONEY_CURRY",
  "BEANBURGER_CURRY",
  "HEARTY_CHEESEBURGER_CURRY",
  "DROUGHT_KATSU_CURRY",
  "SOLAR_POWER_TOMATO_CURRY",
  "MELTY_OMELETTE_CURRY",
  "SOFT_POTATO_CHOWDER",
  "BULK_UP_BEAN_CURRY",
  "SPORE_MUSHROOM_CURRY",
  "EGG_BOMB_CURRY",
  "SPICY_LEEK_CURRY",
  "NINJA_CURRY",
  "GRILLED_TAIL_CURRY",
  "DREAM_EATER_BUTTER_CURRY",
  "FANCY_APPLE_SALAD",
  "BEAN_HAM_SALAD",
  "SNOOZY_TOMATO_SALAD",
  "SNOW_CLOAK_CAESAR_SALAD",
  "WATER_VEIL_TOFU_SALAD",
  "HEAT_WAVE_TOFU_SALAD",
  "DAZZLING_APPLE_CHEESE_SALAD",
  "MOOMOO_CAPRESE_SALAD",
  "IMMUNITY_LEEK_SALAD",
  "SUPERPOWER_EXTREME_SALAD",
  "CONTRARY_CHOCOLATE_MEAT_SALAD",
  "GLUTTONY_POTATO_SALAD",
  "OVERHEAT_GINGER_SALAD",
  "SPORE_MUSHROOM_SALAD",
  "SLOWPOKE_TAIL_PEPPER_SALAD",
  "NINJA_SALAD",
  "WARM_MOOMOO_MILK",
  "FANCY_APPLE_JUICE",
  "CRAFT_SODA_POP",
  "LUCKY_CHANT_APPLE_PIE",
  "FLUFFY_SWEET_POTATOES",
  "EMBER_GINGER_TEA",
  "CLOUD_NINE_SOY_CAKE",
  "STALWART_VEGETABLE_JUICE",
  "BIG_MALASADA",
  "HUSTLE_PROTEIN_SMOOTHIE",
  "HUGE_POWER_SOY_DONUTS",
  "SWEET_SCENT_CHOCOLATE_CAKE",
  "LOVELY_KISS_SMOOTHIE",
  "STEADFAST_GINGER_COOKIES",
  "NEROLIS_RESTORATIVE_TEA",
  "JIGGLYPUFFS_FRUITY_FLAN",
]
`;

exports[`getMealNames shall skip starter meal names if advanced filter passed 1`] = `
[
  "HEARTY_CHEESEBURGER_CURRY",
  "DROUGHT_KATSU_CURRY",
  "SOLAR_POWER_TOMATO_CURRY",
  "MELTY_OMELETTE_CURRY",
  "SOFT_POTATO_CHOWDER",
  "BULK_UP_BEAN_CURRY",
  "SPORE_MUSHROOM_CURRY",
  "EGG_BOMB_CURRY",
  "SPICY_LEEK_CURRY",
  "NINJA_CURRY",
  "GRILLED_TAIL_CURRY",
  "DREAM_EATER_BUTTER_CURRY",
  "SNOW_CLOAK_CAESAR_SALAD",
  "WATER_VEIL_TOFU_SALAD",
  "HEAT_WAVE_TOFU_SALAD",
  "DAZZLING_APPLE_CHEESE_SALAD",
  "MOOMOO_CAPRESE_SALAD",
  "IMMUNITY_LEEK_SALAD",
  "SUPERPOWER_EXTREME_SALAD",
  "CONTRARY_CHOCOLATE_MEAT_SALAD",
  "GLUTTONY_POTATO_SALAD",
  "OVERHEAT_GINGER_SALAD",
  "SPORE_MUSHROOM_SALAD",
  "SLOWPOKE_TAIL_PEPPER_SALAD",
  "NINJA_SALAD",
  "LUCKY_CHANT_APPLE_PIE",
  "FLUFFY_SWEET_POTATOES",
  "EMBER_GINGER_TEA",
  "CLOUD_NINE_SOY_CAKE",
  "STALWART_VEGETABLE_JUICE",
  "BIG_MALASADA",
  "HUSTLE_PROTEIN_SMOOTHIE",
  "HUGE_POWER_SOY_DONUTS",
  "SWEET_SCENT_CHOCOLATE_CAKE",
  "LOVELY_KISS_SMOOTHIE",
  "STEADFAST_GINGER_COOKIES",
  "NEROLIS_RESTORATIVE_TEA",
  "JIGGLYPUFFS_FRUITY_FLAN",
]
`;

exports[`getMealNames shall skip starter meals and unlockable ingredient meal names if unlockable filter passed 1`] = `
[
  "HEARTY_CHEESEBURGER_CURRY",
  "DROUGHT_KATSU_CURRY",
  "SOLAR_POWER_TOMATO_CURRY",
  "MELTY_OMELETTE_CURRY",
  "BULK_UP_BEAN_CURRY",
  "SNOW_CLOAK_CAESAR_SALAD",
  "WATER_VEIL_TOFU_SALAD",
  "HEAT_WAVE_TOFU_SALAD",
  "DAZZLING_APPLE_CHEESE_SALAD",
  "MOOMOO_CAPRESE_SALAD",
  "CONTRARY_CHOCOLATE_MEAT_SALAD",
  "OVERHEAT_GINGER_SALAD",
  "LUCKY_CHANT_APPLE_PIE",
  "EMBER_GINGER_TEA",
  "CLOUD_NINE_SOY_CAKE",
  "STALWART_VEGETABLE_JUICE",
  "BIG_MALASADA",
  "HUSTLE_PROTEIN_SMOOTHIE",
  "HUGE_POWER_SOY_DONUTS",
  "SWEET_SCENT_CHOCOLATE_CAKE",
  "LOVELY_KISS_SMOOTHIE",
  "STEADFAST_GINGER_COOKIES",
  "JIGGLYPUFFS_FRUITY_FLAN",
]
`;
